<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_msg">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_picture_content_description">Profile Picture</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="track">Track:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="slack_username">Slack Username:</string>
</resources>
